--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "exif-js": "^2.2.1",
     "mint-ui": "^2.2.7",
     "vue": "^2.3.3",
     "vue-infinite-loading": "^2.1.3",
