--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.16.2",
     "exif-js": "^2.2.1",
     "mint-ui": "^2.2.7",
-    "vue": "^2.3.3",
+    "vue": "^2.4.2",
+    "vue-dplayer": "^0.0.3",
     "vue-infinite-loading": "^2.1.3",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
