--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.3.3",
     "vue-infinite-loading": "^2.1.3",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "good-storage": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
