--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "exif-js": "^2.2.1",
+    "good-storage": "^1.0.1",
     "mint-ui": "^2.2.7",
     "vue": "^2.4.2",
     "vue-dplayer": "^0.0.3",
